[UPDATE] 이미지 로직 변경